# LLM4SP

./: .gitignore  Codex会话交接说明.md  README.md  pyproject.toml
docs/test-reports/: aid-frequency-phase-scan-check.md  aid-subcarrier-baseband-spectrum-check.md  io-and-tools.md  main-carrier-frequency-spectrum-check.md  main-carrier-pll-track-check.md  planner-与-executor-主链测试.md  registry-算法注册表与拓扑约束测试.md  smoke-与-domain-模型测试.md  tools-与-io联调测试.md  主载波PLL测试.md  主载波粗频估计测试.md  执行链-工具分发联调测试.md  相位模糊度消解核查.md  辅助子载波生成测试.md
matlab/DOR信号处理/: FrePhaseestimatesec.m  README.md  datarecover.m  downfilter.m  getFn.m  main.m  plot_results.m  read_parameter.m  readline.m  selectdata_sigma.m  selectdata_sigma_delete.m  showfft2side.m  showfft2side0.m  signal_generate_per_integration_time.m  solveambiguity_qua_correct.m  subcarrier.m  usingPLL_closed_loop.m  usingPLL_new_original_for_processed1s_pertime.m
scripts/: run_tests_with_report.py
src/signal_agent/: __init__.py
tests/: test_project_smoke.py
tests/algorithms/: test_aid_frequency_phase.py  test_aid_subcarrier.py  test_main_carrier_frequency.py  test_main_carrier_pll.py  test_phase_ambiguity.py
tests/domain/: test_algorithm_spec.py  test_execution_record.py  test_processing_plan.py  test_signal_context.py
tests/executor/: test_plan_executor.py  test_plan_validator.py
tests/io/: test_artifact_store.py  test_parameter_reader.py  test_quantized_signal_reader.py
tests/planner/: test_planner_policy.py
tests/registry/: test_algorithm_registry.py  test_capability_graph.py
tests/testing/: test_reporting.py
(+37 files in other folders)
