[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "signal-agent"
version = "0.1.0"
description = "基于 FastMCP 的离线信号处理 Agent"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_agent"]
